--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html
     div(class='container-fluid')
       div(class='row')
         div(class='col-2 h-100 p-3 shadow')
-          p blah
+          include includes/navigation.pug
         div(class='col-7 h-100 p-3')
           p blah
         div(class='col-3 h-100 p-3 shadow')
