--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -1,16 +1,16 @@
-div(class='row h-25 text-center justify-content-center align-content-center')
+div(class='d-flex h-25 text-center justify-content-center align-items-center')
   ul(class='nav flex-column')
     li(class='nav-item')
       a(class='nav-link' href='#') Login
     li(class='nav-item')
       a(class='nav-link' href='#') Register
-div(class='row h-50 text-center justify-content-center')
+div(class='d-flex h-50 text-center justify-content-center')
   ul(class='nav flex-column')
     li(class='nav-item')
       a(class='nav-link' href='#') Game Lobbies
     li(class='nav-item')
       a(class='nav-link' href='#') About
-div(class='row h-25 text-center justify-content-center align-content-center')
+div(class='d-flex h-25 text-center justify-content-center align-items-center')
   small(class='p-4')
     h6 Footer information
     h8 CSC 667, Group 3.
