Fixed password input.

--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -6,8 +6,8 @@ div(class='d-flex h-100 text-center justify-content-center align-items-center')
         label User ID
         input(type='text' class='form-control' id='userId' placeholder='Enter user ID')
       div(class='form-group')
-        label User ID
-        input(type='text' class='form-control' id='userId' placeholder='Enter password')
+        label Password
+        input(type='text' class='form-control' id='password' placeholder='Enter password')
         small Forgot your password?
       button(type='submit' class='btn btn-primary w-100') Submit
       small Need an account? Register
