Touched up formatting

--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -1,6 +1,6 @@
-div(class='d-flex h-100 text-center justify-content-center align-items-center')
-  div(class='flex-row w-75 shadow p-5')
-    h2 Welcome back
+div(class='d-flex h-100 justify-content-center align-items-center')
+  div(class='flex-lg-col w-50 shadow text-center p-4')
+    h5(class='my-4') Welcome back
     form(class='text-left')
       div(class='form-group')
         label User ID
@@ -9,5 +9,5 @@ div(class='d-flex h-100 text-center justify-content-center align-items-center')
         label Password
         input(type='text' class='form-control' id='password' placeholder='Enter password')
         small Forgot your password?
-      button(type='submit' class='btn btn-primary w-100') Submit
+      button(type='submit' class='btn btn-primary w-100 mt-4') Submit
       small Need an account? Register
