--- a/views/includes/register.pug
+++ b/views/includes/register.pug
@@ -1,6 +1,6 @@
-div(class='d-flex h-100 text-center justify-content-center align-items-center')
-  div(class='flex-row w-75 shadow p-5')
-    h3 Create an account
+div(class='d-flex h-100 justify-content-center align-items-center')
+  div(class='flex-lg-col w-50 shadow text-center p-4')
+    h5(class='my-4') Create an account
     form(class='text-left')
       div(class='form-group')
         label User ID
@@ -11,5 +11,5 @@ div(class='d-flex h-100 text-center justify-content-center align-items-center')
       div(class='form-group')
         label Confirm Password
         input(type='text' class='form-control' id='passwordconfirm' placeholder='Confirm password')
-      button(type='submit' class='btn btn-primary w-100') Submit
+      button(type='submit' class='btn btn-primary w-100 mt-4') Submit
       small Already have an account? Login
