--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -1,5 +1,5 @@
 div(class='d-flex h-100 justify-content-center align-items-center')
-  div(class='flex-lg-col w-50 shadow text-center p-4')
+  div(class='flex-column w-50 shadow text-center p-4')
     h5(class='my-4') Welcome back
     form(class='text-left')
       div(class='form-group')
