Added game page.

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -1,7 +1,7 @@
 div(class='d-flex h-75 w-100 shadow my-3 p-3')
   div(class='flex-row bg-dark h-100 w-100')
-div(class='card bg-light' style="w-100")
-  div(class='card-header py-1 text-center') 000
+div(class='card bg-light w-100')
+  div(class='card-header text-center py-1') 000
   div(class='card-body py-3')
     div(class='row')
       div(class='col-5')
