--- a/views/includes/lobbyinstance.pug
+++ b/views/includes/lobbyinstance.pug
@@ -9,6 +9,6 @@ div(class='card bg-light' style="w-100")
           h5 Player name
       div(class='col-3')
         div(class='d-flex justify-content-around')
-          a(href='#') Join
-          a(href='#') View
+          a(href='/game') Join
+          a(href='/game') View
   div(class='card-footer text-muted small text-right py-1') Created 5 minutes ago.
