--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -1,13 +1,13 @@
 div(class='d-flex h-25 text-center justify-content-center align-items-center')
   ul(class='nav flex-column')
     li(class='nav-item')
-      a(class='nav-link' href='#') Login
+      a(class='nav-link' href='/login') Login
     li(class='nav-item')
-      a(class='nav-link' href='#') Register
+      a(class='nav-link' href='/register') Register
 div(class='d-flex h-50 text-center justify-content-center')
   ul(class='nav flex-column')
     li(class='nav-item')
-      a(class='nav-link' href='#') Game Lobbies
+      a(class='nav-link' href='/lobby') Game Lobbies
     li(class='nav-item')
       a(class='nav-link' href='#') About
 div(class='d-flex h-25 text-center justify-content-center align-items-center')
