Fixed links on login and register includes.

--- a/views/includes/register.pug
+++ b/views/includes/register.pug
@@ -12,4 +12,5 @@ div(class='d-flex h-100 justify-content-center align-items-center')
         label Confirm Password
         input(type='text' class='form-control' id='passwordconfirm' placeholder='Confirm password')
       button(type='submit' class='btn btn-primary w-100 mt-4') Submit
-      small Already have an account? Login
+      small Already have an account? 
+        a(href='/login') Login
