--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -10,4 +10,5 @@ div(class='d-flex h-100 justify-content-center align-items-center')
         input(type='text' class='form-control' id='password' placeholder='Enter password')
         small Forgot your password?
       button(type='submit' class='btn btn-primary w-100 mt-4') Submit
-      small Need an account? Register
+      small Need an account? 
+        a(href='/register') Register
