--- a/views/includes/form_login.pug
+++ b/views/includes/form_login.pug
@@ -8,7 +8,8 @@ div(class='d-flex h-100 justify-content-center align-items-center')
       div(class='form-group')
         label Password
         input(type='text' class='form-control' id='password' placeholder='Enter password')
-        small Forgot your password?
+        small
+          a(href='#') Forgot your password?
       button(type='submit' class='btn btn-primary w-100 mt-4') Submit
       small Need an account? 
         a(href='/register') Register
