--- a/views/register.pug
+++ b/views/register.pug
@@ -1,12 +1,4 @@
-html
-  include includes/head.pug
-  body
-    div(class='container-fluid')
-      div(class='row')
-        div(class='col-2 h-100 p-3 shadow')
-          include includes/navigation.pug
-        div(class='col-7 h-100 p-3')
-          include includes/register.pug
-        div(class='col-3 h-100 p-3 shadow')
-          p blah
+extends base.pug
 
+block content
+  include includes/form_register.pug
