Fixed login and register forms.

--- a/views/includes/form_register.pug
+++ b/views/includes/form_register.pug
@@ -3,8 +3,8 @@ div(class='d-flex h-100 justify-content-center align-items-center')
     h5(class='my-4') Create an account
     form(class='text-left' action='/lobby' method='post')
       div(class='form-group')
-        label User ID
-        input(type='text' class='form-control' id='userId' placeholder='Enter user ID')
+        label Username
+        input(type='text' class='form-control' id='username' placeholder='Enter username')
       div(class='form-group')
         label Password
         input(type='text' class='form-control' id='password' placeholder='Enter password')
