--- a/views/includes/form_login.pug
+++ b/views/includes/form_login.pug
@@ -7,7 +7,7 @@ div(class='d-flex h-100 justify-content-center align-items-center')
         input(type='text' class='form-control' id='username' placeholder='Enter username' required)
       div(class='form-group')
         label Password
-        input(type='text' class='form-control' id='password' placeholder='Enter password' required)
+        input(type='password' class='form-control' id='password' placeholder='Enter password' required)
         small
           a(href='#') Forgot your password?
       button(type='submit' class='btn btn-primary w-100 mt-4') Login
