--- a/views/includes/form_login.pug
+++ b/views/includes/form_login.pug
@@ -4,10 +4,10 @@ div(class='d-flex h-100 justify-content-center align-items-center')
     form(class='text-left' action='/lobby' method='post')
       div(class='form-group')
         label Username
-        input(type='text' class='form-control' id='username' placeholder='Enter username' required)
+        input(type='text' class='form-control' name="username" placeholder='Enter username' required)
       div(class='form-group')
         label Password
-        input(type='password' class='form-control' id='password' placeholder='Enter password' required)
+        input(type='password' class='form-control' name ="password" placeholder='Enter password' required)
         small
           a(href='#') Forgot your password?
       button(type='submit' class='btn btn-primary w-100 mt-4') Login
