Added user case in navigation.

--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -1,9 +1,13 @@
 div(class='d-flex h-25 text-center justify-content-center align-items-center')
   ul(class='nav flex-column')
-    li(class='nav-item')
-      a(class='nav-link' href='/login') Login
-    li(class='nav-item')
-      a(class='nav-link' href='/register') Register
+    if user
+      li(class='nav-item')
+        a(class='nav-link' href='/user_lobby') My Lobbies
+    else
+      li(class='nav-item')
+        a(class='nav-link' href='/login') Login
+      li(class='nav-item')
+        a(class='nav-link' href='/register') Register
 div(class='d-flex h-50 text-center justify-content-center')
   ul(class='nav flex-column')
     li(class='nav-item')
