todo: change logout behavior when sessions added

--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -1,10 +1,13 @@
 div(class='d-flex h-25 text-center justify-content-center align-items-center')
   ul(class='nav flex-column')
-    if user
+    if username
       li(class='nav-item')
         a(class='nav-link' href='/user_lobby') My Lobbies
+      li(class='nav-item')
+        a(class='nav-link' href='/lobby') Logout
     else
       li(class='nav-item')
+        usename
         a(class='nav-link' href='/login') Login
       li(class='nav-item')
         a(class='nav-link' href='/register') Register
