modified chess game

--- a/views/base.pug
+++ b/views/base.pug
@@ -9,3 +9,6 @@ html
         block content
       div(class='col-3 h-100 p-3 shadow')
         include includes/chat.pug
+    //- script.
+    //-   var board1 = ChessBoard('board1', 'start'); 
+
