--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,3 +3,15 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   link(rel='stylesheet' href='https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css')
+
+  //- chess pieces
+  link(rel='stylesheet' type='text/css' href='chess-package/css/chessboard-0.3.0.css')
+
+  //- chess tables
+  script(src='chess-package/js/chessboard-0.3.0.js')
+  //- script(src='https://code.jquery.com/jquery-1.12.4.min.js')
+  script(src='https://code.jquery.com/jquery-1.12.4.js')
+
+
+  //- chess move validation/ rules
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js')
