--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -1,61 +1,97 @@
+ul(class='nav nav-tabs mb-2')
+    li(class='nav item')
+        a(class='nav-link active') World
 
-div(class='card bg-light' id='private_box' style='w-100')
-    div(class='card')
-       div(class='card-header') Chatbox
-       div(class='card-body' style='height: 300px') Screen
-            hr
-            hr
-            hr
-            hr
-            hr
-            hr
-       div(class='card-footer') Keyboard
-            form(id='sendMessage')
-                div(class='input-group')
-                    input(type="text" class='form-control' name='message' placeholder='Type your message...') 
-                    div(class='input-group-append')
-                    button(class='btn btn-primary') Send
-
-
-//- div(class='d-flex h-100 justify-content-center align-items-center')
-
-//- div(class='card bg-light' id='world_chat_box' style='w-100')
-//-     //- div(class='card-body py-2')
-//-     div(class='card')
-//-        div(class='card-header') Chatbox
-//-        div(class='card-body' style='height: 300px') Screen
-//-             hr
-//-             hr
-//-             hr
-//-             hr
-//-             hr
-//-             hr
-//-        div(class='card-footer') Keyboard
-//-             form(id='sendMessage')
-//-                 div(class='input-group')
-//-                     input(type="text" class='form-control' name='message' placeholder='Type your message...') 
-//-                     div(class='input-group-append')
-//-                     button(class='btn btn-primary') Send
+div(class='list group h-75 overflow-auto')
+    // example chat block
+    li(class='list-group-item mb-1')
+        div(class='d-flex w-100 justify-content-between')
+            h6(class='mb-0') Name
+        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    // example chat block
+    li(class='list-group-item mb-1')
+        div(class='d-flex w-100 justify-content-between')
+            h6(class='mb-0') Name
+        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    // example chat block
+    li(class='list-group-item mb-1')
+        div(class='d-flex w-100 justify-content-between')
+            h6(class='mb-0') Name
+        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    // example chat block
+    li(class='list-group-item mb-1')
+        div(class='d-flex w-100 justify-content-between')
+            h6(class='mb-0') Name
+        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+        // example chat block
+    li(class='list-group-item mb-1')
+        div(class='d-flex w-100 justify-content-between')
+            h6(class='mb-0') Name
+        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+div(class='input-group border-top pt-2')
+    input(type='text' class='form-control' placeholder='Message world chat')
+    div(class='input-group-append')
+        button(class='btn btn-outline-primary' type='button') Send
 
 
-        
-div(class='card-footer text-muted small text-right py-1')
-    div(class='row')
-        button(class='col-sm-6 btn btn-lighting' id='private_box' onClick='handleChange()') Private Chat
-        button(class='col-sm-6 btn btn-lighting' id='world_box' onClick='handleChange()') World Chat
+//-
+    div(class='card bg-light' id='private_box' style='w-100')
+        div(class='card')
+        div(class='card-header') Chatbox
+        div(class='card-body' style='height: 300px') Screen
+                hr
+                hr
+                hr
+                hr
+                hr
+                hr
+        div(class='card-footer') Keyboard
+                form(id='sendMessage')
+                    div(class='input-group')
+                        input(type="text" class='form-control' name='message' placeholder='Type your message...') 
+                        div(class='input-group-append')
+                        button(class='btn btn-primary') Send
+
+//-
+    //- div(class='d-flex h-100 justify-content-center align-items-center')
+
+    //- div(class='card bg-light' id='world_chat_box' style='w-100')
+    //-     //- div(class='card-body py-2')
+    //-     div(class='card')
+    //-        div(class='card-header') Chatbox
+    //-        div(class='card-body' style='height: 300px') Screen
+    //-             hr
+    //-             hr
+    //-             hr
+    //-             hr
+    //-             hr
+    //-             hr
+    //-        div(class='card-footer') Keyboard
+    //-             form(id='sendMessage')
+    //-                 div(class='input-group')
+    //-                     input(type="text" class='form-control' name='message' placeholder='Type your message...') 
+    //-                     div(class='input-group-append')
+    //-                     button(class='btn btn-primary') Send
 
 
-script(type="text/javascript").
-      $("#private_box").click(function() {
-      console.log('login btn clicked');
-      $("#world_box").hide();
-      $("#rivate_box").show();
-      });
+            
+    div(class='card-footer text-muted small text-right py-1')
+        div(class='row')
+            button(class='col-sm-6 btn btn-lighting' id='private_box' onClick='handleChange()') Private Chat
+            button(class='col-sm-6 btn btn-lighting' id='world_box' onClick='handleChange()') World Chat
 
-      $("#world_box").click(function() {
-      console.log('regsiter btn clicked');
-      $("#private_box").hide();
-      $("#world_box").show();
-      });
-    }
+
+    script(type="text/javascript").
+        $("#private_box").click(function() {
+        console.log('login btn clicked');
+        $("#world_box").hide();
+        $("#rivate_box").show();
+        });
+
+        $("#world_box").click(function() {
+        console.log('regsiter btn clicked');
+        $("#private_box").hide();
+        $("#world_box").show();
+        });
+        }
 
