--- a/views/includes/form_create_lobby.pug
+++ b/views/includes/form_create_lobby.pug
@@ -1,16 +1,9 @@
 div(class='d-flex h-100 justify-content-center align-items-center')
-  div(class='column w-50 shadow text-center p-4')
-    h5(class='my-4') Create an account
-    form(class='text-left' action='/register' method='post' oninput='passwordconfirm.setCustomValidity(passwordconfirm.value != password.value ? "Passwords do not match." : "")')
-      div(class='form-group')
-        label Username
-        input(type='text' class='form-control' name="username" placeholder='Enter username' required )
-      div(class='form-group')
-        label Password
-        input(type='password' class='form-control' name="password" placeholder='Enter password' required )
-      div(class='form-group')
-        label Confirm Password
-        input(type='password' class='form-control' name='passwordconfirm' placeholder='Confirm password' )
-      button(type='submit' class='btn btn-primary w-100 mt-4') Register
-      small Already have an account? 
-        a(href='/login') Login
+  div(class='alert alert-secondary w-50')
+    h4(class='alert-heading') Room ID succesfully created.
+    p Your room has been sucesfully created and can now be viewed in the public list of lobbies. This room along with all your other rooms can be easily viewed and managed in your personal list of lobbies.
+    p Good luck and have fun.
+    hr
+    div(class='row justify-content-center')
+      a(class="btn btn-secondary mx-2" href="/lobby") Public Lobbies
+      a(class="btn btn-primary mx-2" href="/lobby") My Lobbies
