Added global and private chat functionality.

--- a/views/includes/chess_table.pug
+++ b/views/includes/chess_table.pug
@@ -1,5 +1,5 @@
 script(src='chess-package/js/chessboard-0.3.0.js')
-script(src='https://code.jquery.com/jquery-1.12.4.min.js')
+script(src='https://code.jquery.com/jquery-1.12.4.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js')
 #board(style='width: 400px')
 p
