Added about page.

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -1,5 +1,5 @@
 div(class='d-flex flex-column justify-content-center align-items-center shadow bg-dark p-3 mb-2')
-  div(class='container h-75 w-75 m-0 mb-1 p-0' type='text/html' id='board') 
+  div(class='flex-row h-75 w-75 m-0 mb-1 p-0 overflow-auto' type='text/html' id='board' ) 
   div(class='alert alert-primary w-75 m-0 pb-0 text-center align-items-center small')
     p
       | Status: 
