--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -21,7 +21,7 @@ div(class='d-flex h-50 text-center justify-content-center border-bottom pt-5')
     li(class='nav-item')
       a(class='nav-link' href='/lobby') Game Lobbies
     li(class='nav-item')
-      a(class='nav-link' href='#') About
+      a(class='nav-link' href='/about') About
 div(class='d-flex h-25 text-center justify-content-center align-items-center')
   small(class='p-4')
     h6 Footer information
