Hid fen paragraph.

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -4,7 +4,7 @@ div(class='d-flex flex-column justify-content-center align-items-center shadow b
     p
       | Status: 
       span#status
-  p(class="small text-light text-muted" name="fen")
+  p(class="text-hide" name="fen")
     span#fen
     //-
       p
