--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -133,6 +133,11 @@ script.
         statusEl.html(status);
         fenEl.html(game.fen());
         pgnEl.html(game.pgn());
+
+        $.ajax({method: 'POST', url: 'game/state', data : statusEl, success: function(data){ alert(data); }, error: function(xhr, desc, err){console.log(err);}
+        });
+
+
       };
 
       var cfg = {
@@ -146,3 +151,5 @@ script.
         };
       board = ChessBoard('board', cfg);
       updateStatus();
+
+      
