--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -15,3 +15,5 @@ head
 
   //- chess move validation/ rules
   script(src='https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js')
+
+  script(src='http://code.jquery.com/jquery-3.3.1.js' integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous")
