--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -134,7 +134,7 @@ script.
         fenEl.html(game.fen());
         pgnEl.html(game.pgn());
 
-        $.ajax({method: 'POST', url: 'game/state', data : statusEl.serialize(), success: function(data){ alert(data); }, error: function(xhr, desc, err){console.log(err);}
+        $.ajax({method: 'POST', url: 'game/state', data: status.serialize(), success: function(data){ alert(data); }, error: function(xhr, desc, err){console.log(err);}
         });
 
 
