--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -4,8 +4,7 @@ div(class='d-flex flex-column justify-content-center align-items-center shadow b
     p
       | Status: 
       span#status
-  p(class="text-hide" name="fen")
-    span#fen
+  p(name="fen") asdasdasd
     //-
       p
         | FEN: 
@@ -134,7 +133,7 @@ script.
         fenEl.html(game.fen());
         pgnEl.html(game.pgn());
 
-        $.ajax({method: 'POST', url: 'game/state', data: status.serialize(), success: function(data){ alert(data); }, error: function(xhr, desc, err){console.log(err);}
+        $.ajax({method:'POST', url: 'game/state', data: {status: game.fen()}, success: function(data){ alert(data); }, error: function(xhr, desc, err){console.log(err);}
         });
 
 
