--- a/views/base.pug
+++ b/views/base.pug
@@ -3,12 +3,10 @@ html
   body
     div(class='container-fluid')
       div(class='row')
-        div(class='col-2 h-100 p-3 shadow')
+        //- div(class='col-sm-2 h-100 p-3 shadow')
+        div(class='col-md-2 p-3 shadow')
           include includes/navigation.pug
-        div(class='col-7 h-100 p-3')
+        div(class='col-md-7 p-3')
           block content
-        div(class='col-3 h-100 p-3 shadow')
+        div(class='col-md-3 p-3 shadow')
           include includes/chat.pug
-    //- script.
-    //-   var board1 = ChessBoard('board1', 'start'); 
-
