--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -13,8 +13,6 @@ div(class="container shadow bg-dark d-flex flex-column justify-content-center al
       //- p
       //-   | pgn: 
       //-   span#pgn
-
-
 div(class='card bg-light w-100')
   div(class='card-header text-center py-1') 000
   div(class='card-body py-3')
@@ -33,6 +31,8 @@ div(class='card bg-light w-100')
 script.
       var board,
       game = new Chess(),
+      state = 'rnbqkbnr/pp2pp2/8/2ppP1pp/PP4P1/8/2PP1P1P/RNBQKBNR b KQkq - 0 5',
+      //- state = 'rnbqkbnr/p1pppppp/8/1p6/P2P4/8/1PP1PPPP/RNBQKBNR b KQkq d3 0 2',
       statusEl = $('#status'),
       fenEl = $('#fen'),
       pgnEl = $('#pgn');
@@ -145,20 +145,21 @@ script.
 
         });
 
+        //- state: 'rnbqkbnr/p1p1p2p/5P2/1p1p2p1/P6P/8/1PPP1PP1/RNBQKBNR b KQkq - 0 5';
+        //- game.load(game.fen());
       };
 
       var cfg = {
         draggable: true,
-        position: 'start',
-        
-        //- position: 'rnbqkbnr/p1pppppp/8/8/2p5/P7/1P1PPPPP/RNBQKBNR w KQkq - 0 3',
+        position: state,
         onDragStart: onDragStart,
         onDrop: onDrop,
         onMouseoutSquare: onMouseoutSquare,
         onMouseoverSquare: onMouseoverSquare,
         onSnapEnd: onSnapEnd
         };
+      
+      game.load(state);
       board = ChessBoard('board', cfg);
-      //- updateStatus();
-
+      updateStatus();
       
