--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -27,13 +27,13 @@ div(class='card bg-light w-100')
           h5 vs.
       div(class='col-5')
         div(class='d-flex justify-content-around')
-          h5(id="player2_turn") Player 2
+          h5(id="player2_turn") !{state}
 
 
 script.
+      var state = "!{state}";
       var board,
       game = new Chess(),
-      state = '4r3/8/2p2PPk/1p2B3/pP4R1/P2rp3/2P2K2/8 w - - 0 47',
       statusEl = $('#status'),
       fenEl = $('#fen'),
       pgnEl = $('#pgn');
@@ -147,7 +147,7 @@ script.
         });
 
       };
-
+      
       var cfg = {
         draggable: true,
         position: state,
