--- a/views/includes/form_create_lobby.pug
+++ b/views/includes/form_create_lobby.pug
@@ -7,3 +7,9 @@ div(class='d-flex h-100 justify-content-center align-items-center')
     div(class='row justify-content-center')
       a(class="btn btn-secondary mx-2" href="/lobby") Public Lobbies
       a(class="btn btn-primary mx-2" href="/lobby") My Lobbies
+      a(class="btn btn-primary mx-2" href="/game") Create Table
+
+
+script.
+  var gameId = 001
+  var game_state = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1"
