--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -4,31 +4,39 @@ ul(class='nav nav-tabs mb-2')
         a(class='nav-link' onClick='OpenPrivateChat()') Private
 
 div(class='list group h-75 overflow-auto' id="world_chat")
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-        // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    div(class='card' id="messages")
+        //- p assasd
+        //- p asdda
+        //- p asdads
+
+
+
+
+
+    //- li(class='list-group-item mb-1') 
+    //-     div(class='d-flex w-100 justify-content-between')
+    //-         h6(class='mb-0' ) Name
+    //-     small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    //- // example chat block
+    //- li(class='list-group-item mb-1')
+    //-     div(class='d-flex w-100 justify-content-between')
+    //-         h6(class='mb-0') Name
+    //-     small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    //- // example chat block
+    //- li(class='list-group-item mb-1')
+    //-     div(class='d-flex w-100 justify-content-between')
+    //-         h6(class='mb-0') Name
+    //-     small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    //- // example chat block
+    //- li(class='list-group-item mb-1')
+    //-     div(class='d-flex w-100 justify-content-between')
+    //-         h6(class='mb-0') Name
+    //-     small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    //-     // example chat block
+    //- li(class='list-group-item mb-1')
+        //- div(class='d-flex w-100 justify-content-between')
+        //-     h6(class='mb-0') Name
+        //- small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
 //- div(class='input-group border-top pt-2')
 //-     input(type='text' class='form-control' placeholder='Message world chat')
 //-     div(class='input-group-append')
@@ -50,10 +58,10 @@ div(class='list group h-75 overflow-auto' id="private_chat")
             h6(class='mb-0') Name
         small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
 
-div(class='input-group border-top pt-2')
-    input(type='text' class='form-control' placeholder='Message world chat')
+div(class='input-group border-top pt-2' )
+    input(type='text' class='form-control' placeholder='Message world chat' id="message")
     div(class='input-group-append')
-        button(class='btn btn-outline-primary' type='button') Send
+        button(class='btn btn-outline-primary' onClick='ButtonIsClicked()') Send
 
 
 
@@ -125,4 +133,14 @@ script.
         console.log('World Chat Is Opened');
         $("#world_chat").show();
         $("#private_chat").hide();
+    }
+
+    function ButtonIsClicked(){
+        //- alert('botton is clicked')
+        //- var message = $("#message").val()
+        //- console.log(mes)
+        //- console.log($("#message").val())
+
+        var messages_content = $("#messages").html()
+        $("#messages").html(messages_content + '<p>' + '<mb-0>' + $("#message").val())
     }
