--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -84,6 +84,7 @@ script.
         if (move === null) return 'snapback';
         
         updateStatus();
+        updateState();
       };
 
 
@@ -115,6 +116,18 @@ script.
         //- $.ajax({method:'GET', url: 'game/state')}
 
       };
+
+      // Sends AJAX request to server to update game state
+      // TODO: Use AJAX to wait for game state update
+      var updateState = function() {
+        $.ajax({
+          method:'POST',
+          url: 'game/state', 
+          data: {status: game.fen()}, 
+        //- success: function(data){ alert(data); }, 
+        //- error: function(xhr, desc, err){console.log(err);}
+        });
+      };
       
       var updateStatus = function() {
         var status = '';
@@ -145,15 +158,6 @@ script.
         statusEl.html(status);
         fenEl.html(game.fen());
         pgnEl.html(game.pgn());
-
-        $.ajax({method:'POST',
-           url: 'game/state', 
-        data: {status: game.fen()}, 
-        //- success: function(data){ alert(data); }, 
-        //- error: function(xhr, desc, err){console.log(err);}
-
-        });
-
       };
       
       var cfg = {
@@ -168,7 +172,6 @@ script.
       
       board = ChessBoard('board', cfg);
       game.load(state);
-      // TODO: Replace with display status, to not send POST request on game load
       updateStatus();
       
       
