--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -123,7 +123,7 @@ script.
         $.ajax({
           method:'POST',
           url: 'game/state', 
-          data: {status: game.fen()}, 
+          data: {status: game.fen(), gameId: gameId}, 
         //- success: function(data){ alert(data); }, 
         //- error: function(xhr, desc, err){console.log(err);}
         });
