--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -17,3 +17,8 @@ head
   script(src='https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js')
 
   script(src='http://code.jquery.com/jquery-3.3.1.js' integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous")
+
+
+  script(src="/socket.io/socket.io.js")
+
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js")
