Made UI changes. Added home page.

--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -1,9 +1,9 @@
-ul(class='nav nav-tabs mb-2')
+ul(class='nav nav-tabs pt-3')
     li(class='nav item')
         a(class='nav-link active' onClick='OpenWorldChat()') World
         a(class='nav-link' onClick='OpenPrivateChat()') Private
 
-div(class='list group h-75 overflow-auto' id="world_chat")
+div(class='list group h-75 overflow-auto py-2' id="world_chat")
     // example chat block
     li(class='list-group-item mb-1')
         div(class='d-flex w-100 justify-content-between')
