--- a/views/includes/static_about.pug
+++ b/views/includes/static_about.pug
@@ -1,5 +1,5 @@
 div(class='d-flex h-100 justify-content-center')
-  div(class='container w-100 shadow p-5')
+  div(class='container w-100 p-5')
     h2(class='mb-5') About
     h4 Team 3
     Team 3 consists of the 5 most capable and most handsome students in CSC 667. The foundation of Team 3 includes working together as a team with complemetary skills in javascript, html, mysql, and php, implementing industry standards in agile development, and utilizing common technologies such as express, pug, and bootstrap to problem solve. 
