about fixed, /mylobbies associated with current user

--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -15,7 +15,7 @@ div(class='d-flex h-50 text-center justify-content-center border-bottom pt-5')
   ul(class='nav flex-column')
     if user
       li(class='nav-item')
-        a(class='nav-link' href='/user_lobby') My Lobbies
+        a(class='nav-link' href='/mylobbies') My Lobbies
       li(class='nav-item')
         a(class='nav-link' href='/create_lobby') Create Lobby
     li(class='nav-item')
